[package]
name = "bacon-sci-1"
version = "0.11.0"
authors = ["aftix <aftix@aftix.xyz>", "Jonas Hübotter <jonas.huebotter@gmail.com>"]
edition = "2018"
license="MIT"
description="Scientific computing in Rust"
homepage="https://github.com/jonhue/bacon"
repository="https://github.com/jonhue/bacon"
readme="README.md"
keywords=["numeric", "science", "integration", "quadrature"]
categories=["science"]

[features]
serialize=["serde"]

[dev-dependencies]
float-cmp="0.8"
rand="0.8"

[dependencies]
serde={version="1.0", optional=true}
nalgebra="0.24"
num-complex="0.3"
num-traits="0.2"
phf = "0.8"

[build-dependencies]
phf_codegen = "0.8"
